# bskydata

./: .env.example  .gitignore  README.md  pyproject.toml
bskydata/agents/: __init__.py  agent.py
bskydata/api/: __init__.py  client.py
bskydata/builders/: __init__.py
bskydata/builders/network/: search_and_follower_neo4j.py
bskydata/graph/neo4j/: config.py  storage.py
bskydata/parsers/: __init__.py  base.py
bskydata/parsers/profiles/: basic.py
bskydata/parsers/search_terms/: basic.py  search_terms.py
bskydata/scrapers/: __init__.py  followers.py  follows.py  profiles.py  search_terms.py
bskydata/storage/: base.py  base_writers.py  cloud_writers.py  local_writers.py  writers.py
bskydata/storage/cloud/: aws_writers.py  azure_writers.py  base.py  gcp_writers.py
bskydata/storage/database/: mongodb.py
bskydata/storage/handlers/: json.py
bskydata/storage/local/: local_writers.py
bskydata/storage/writers/: __init__.py  base.py
bskydata/storage/writers/cloud/: aws.py  azure.py  base.py  gcp.py
bskydata/storage/writers/database/: mongodb.py  neo4j.py
bskydata/storage/writers/local/: local.py
examples/: store_neo4j_data.py  store_profile_data_local.py  store_profile_followers_data_local.py  store_profile_follows_data_local.py  store_search_term_posts.py  store_search_term_posts_aws.py  store_search_term_posts_azure.py  store_search_term_posts_cloud.py  store_search_term_posts_gcp.py  store_search_term_posts_local.py  store_search_term_posts_mongodb.py
