[tool.poetry]
name = "bskydata"
version = "0.3.4"
description = ""
authors = ["Scott Stoltzman <scottstoltzman@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/stoltzmaniac/bskydata"
repository = "https://github.com/stoltzmaniac/bskydata"
keywords = ["bluesky", "bsky", "api", "wrapper", "atproto"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
atproto = "^0.0.56"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
