[tool.poetry]
name = "bskydata"
version = "0.6.4"
description = ""
authors = ["Scott Stoltzman <scottstoltzman@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/stoltzmaniac/bskydata"
repository = "https://github.com/stoltzmaniac/bskydata"
keywords = ["bluesky", "bsky", "api", "wrapper", "atproto"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
atproto = "^0.0.56"
python-dotenv = "^1.0.1"
azure-storage-blob = "^12.24.0"
boto3 = "^1.35.79"
google-cloud-storage = "^2.19.0"
pymongo = "^4.10.1"
neo4j = "^5.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
